<resources>
    <string name="app_name">Cashless</string>
    <string name="empty"></string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Log In</string>
    <string name="vendapp">VendApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="update_balance">Update Balance…</string>
    <string name="logging_in">Logging In…</string>

    <string name="see_my_transactions">See my transactions</string>
    <string name="your_balance_is">Your balance is</string>
    <string name="connect_to_machine">Connect to Machine</string>
    <string name="nfc_button">NFC</string>
    <string name="qr_code_button">QR CODE</string>
    <string name="machine_series_button">machine series</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="connecting">Connecting…</string>
    <string name="balance">Balance</string>
    <string name="connected_to_machine">Connected to Machine</string>
    <string name="disconnect">Disconnect</string>
</resources>
