<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.karikeo.cashless.ui.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/vendapp"
            android:textColor="@color/base_01"
            android:textSize="72sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_balance_is"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="1000$" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/base_02"
            android:text="@string/see_my_transactions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect_to_machine"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nfc_button"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/nfc_button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/qr_code_button"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:text="@string/qr_code_button"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/machine_series_button"
            android:layout_width="144dp"
            android:layout_height="96dp"
            android:layout_marginTop="8dp"
            android:text="@string/machine_series_button"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />
    </LinearLayout>
</FrameLayout>