<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/vendomatica_cashless" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/by"
        android:textColor="@color/text_01"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="156dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="fitStart"
        android:src="@drawable/entel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text_base"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/login"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:maxLength="50" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/text_base"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/text_base"
        android:textSize="18sp"
        android:textStyle="italic" />

</LinearLayout>